log
vi., 22 de abr. de 2022 11:16:08: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
9031142
vi., 22 de abr. de 2022 11:25:46: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:86:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
ca222a6
vi., 22 de abr. de 2022 11:36:25: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
afae0ee
vi., 22 de abr. de 2022 11:41:16: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
f93fb09
vi., 22 de abr. de 2022 11:49:51: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:20: error: 'return' with a value, in function returning void [-Werror]
             return NULL;
                    ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7a10a20
vi., 22 de abr. de 2022 11:50:06: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
57fea8d
vi., 22 de abr. de 2022 11:54:46: 
 treemap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:29: error: 'return' with a value, in function returning void [-Werror]
     if(tree == NULL) return NULL;
                             ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
295ee04
vi., 22 de abr. de 2022 11:55:03: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54c4d6d
vi., 22 de abr. de 2022 11:56:02: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
7bab159
vi., 22 de abr. de 2022 12:06:02: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:29: error: 'return' with a value, in function returning void [-Werror]
     if(tree == NULL) return NULL;
                             ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
255297f
vi., 22 de abr. de 2022 12:06:15: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
4aeb734
vi., 22 de abr. de 2022 12:06:58: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
661a241
vi., 22 de abr. de 2022 12:09:23: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
2630d95
vi., 22 de abr. de 2022 12:12:31: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  17|3
total_score: 30/70
7ff77e8
vi., 22 de abr. de 2022 14:17:35: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:93:45: error: 'return' with a value, in function returning void [-Werror]
     if(tree == NULL || node == NULL) return NULL;
                                             ^~~~
treemap.c:92:6: note: declared here
 void removeNode(TreeMap * tree, TreeNode* node) {
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
adf7c61
vi., 22 de abr. de 2022 14:17:50: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
270912e
vi., 22 de abr. de 2022 14:21:12: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 35/70
8a13bc4
vi., 22 de abr. de 2022 14:24:02: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  18|3
total_score: 35/70
ad336da
vi., 22 de abr. de 2022 14:32:14: 
 treemap.c | 25 +++++++++++++++++++++----
 1 file changed, 21 insertions(+), 4 deletions(-)
test.c: In function 'removeNode':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
746aaa5
vi., 22 de abr. de 2022 14:32:23: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  20|3
total_score: 45/70
9aeb70c
vi., 22 de abr. de 2022 14:43:26: 
 treemap.c | 29 ++++++++---------------------
 1 file changed, 8 insertions(+), 21 deletions(-)
 tests:  20|3
total_score: 30/70
01573cf
vi., 22 de abr. de 2022 15:05:34: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  23|3
total_score: 35/70
892a389
vi., 22 de abr. de 2022 15:09:04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|3
total_score: 50/70
8b49054
vi., 22 de abr. de 2022 15:11:00: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  22|3
total_score: 50/70
885a771
vi., 22 de abr. de 2022 15:29:13: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  23|2
total_score: 40/70
c906131
vi., 22 de abr. de 2022 15:41:23: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  19|2
total_score: 35/70
60a3702
vi., 22 de abr. de 2022 15:44:13: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  20|2
total_score: 40/70
122ed65
vi., 22 de abr. de 2022 20:03:45: 
 treemap.c | 30 +++++++++++++++++++++---------
 1 file changed, 21 insertions(+), 9 deletions(-)
 tests:  21|3
total_score: 50/70
b652832
vi., 22 de abr. de 2022 20:07:00: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  23|2
total_score: 40/70
c96353d
vi., 22 de abr. de 2022 20:13:19: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  26|1
total_score: 45/70
3dfd5c5
vi., 22 de abr. de 2022 20:15:28: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  23|1
total_score: 60/70
7db9707
vi., 22 de abr. de 2022 20:20:33: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  27|1
total_score: 60/70
f2ec6d5
vi., 22 de abr. de 2022 20:24:22: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
248c616
do., 24 de abr. de 2022 14:31:06: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  29|0
total_score: 60/70
5e8f771
do., 24 de abr. de 2022 14:36:09: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  29|0
total_score: 60/70
3a93d47
do., 24 de abr. de 2022 14:41:48: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  29|0
total_score: 70/70
076f691
do., 24 de abr. de 2022 14:43:54: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  29|0
total_score: 70/70
785a0a5
